--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,9 @@
 node {
     
 def mavenHome = tool name: "maven3.8.5"
+echo " the node name is  ${env.node_name} "
+echo "the job name is    ${env.job_name} "
+echo "the build number is ${env.build_number} "
 // checkout stage                                       
 stage ('checkoutcode'){
 git 'https://github.com/omairmomin/maven-web-application.git'
