--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version></version>
+	<version>1.5.0snapsot</version>
 	
 	<name>maven-web-application</name>
 
